# app/models/user.rb
@@ -32,8 +32,10 @@ class User < ApplicationRecord
   belongs_to :organization, optional: true
   has_many :user_authentications
   has_many :blood_pressures
+  has_many :liver_values
   has_many :blood_sugars
   has_many :patients, -> { distinct }, through: :blood_pressures
+  has_many :patients, -> { distinct }, through: :liver_values
   has_many :diabetes_patients, -> { distinct }, through: :blood_sugars
   has_many :registered_patients,
     inverse_of: :registration_user,
